# amc2moodle

./: .gitignore  CreateDocAndTest.sh  LICENSE  MANIFEST.in  README.md  amc2moodle.py  amc2moodle.sh  base.tex  deploy.sh  pyproject.toml  setup.py
.github/workflows/: amc2moodle.yml  build-container-multi-arch.yml  build-container.yml  checkLateXML.yml  ci-mac-os-dbg.yml  ci-mac-os.yml  ci-mac-port.yml  ci-mac.yml  ci-publish.yml  ci-ubuntu.yml  ci.yml  coverage.yml  coverage.yml.bck
amc2moodle/: README.md  __init__.py  amc2moodle_class.py  convert.py  grading.py  test.py  transform2html.xslt
amc2moodle/amc2moodle/: README.md  amc2moodle_class.py  automultiplechoice.sty.ltxml  convert.py  fp.sty.ltxml  mhchem.sty.ltxml  test.py  transform.xslt  transform2html.xslt  transform_qtype.xslt
amc2moodle/amc2moodle/test/: QCM.tex  QCM.xml  QCM_wo-tikz.tex  QCM_wo-tikz.xml  cleaning.tex  cleaning.xml  common-bank.tex  element.tex  numerical.tex  numerical.xml
amc2moodle/moodle2amc/: README.md  __init__.py  _questions.py  _quiz.py  exemple.xml  html2tex.xslt  struc2tex.xslt  test.py
amc2moodle/moodle2amc/test/: automultiplechoice.sty  calculated.xml  moodle-bank-exemple.tex  moodle-bank-exemple.xml
amc2moodle/test/: QCM.tex  QCM.xml  QCM_wo-tikz.tex  QCM_wo-tikz.xml
amc2moodle/tests/: __init__.py  test_amc2moodle.py  test_moodle2amc.py  test_utils_calculatedParser.py  test_utils_text.py
amc2moodle/tests/payload_test_amc2moodle/: QCM.tex  numerical.xml  tikz.tex
amc2moodle/tests/payload_test_moodle2amc/: moodle-bank-exemple.tex  moodle-bank-exemple.xml
amc2moodle/utils/: calculatedParser.py  customLogging.py  flatex.py  misc.py  test.py  test_text.py  text.py
doc/: amc2moodle.tex
docker/: Dockerfile  README.md  autorun-amc2moodle.sh
moodle2amc/: exemple.xml  html2tex.xslt  struc2tex.xslt  totex.py
src/: __init__.py  amc2moodle.py  automultiplechoice.sty.ltxml  grading.py  grading_old.py  transform.xslt  transform2html.xslt  transform_ns.xslt
src/amc2moodle/: automultiplechoice.sty.ltxml  convert.py  fp.sty.ltxml
src/moodle2amc/: _quiz.py
test/: QCM.tex  QCM.xml  QCM_wo-tikz.tex  QCM_wo-tikz.xml
test/payload_test_amc2moodle/: common-bank.tex
tests/: __init__.py  test_amc2moodle.py  test_moodle2amc.py
tests/payload_test_amc2moodle/: includestyles.tex
