[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "amc2moodle"
dynamic = ['version']
authors = [
    {name = "B. Nennig", email = "benoit.nennig@isae-supmeca.fr"},
    {name = "L. Laurent", email = "luc.laurent@lecnam.net"}
]
description = "A tool to convert automultiplechoice quizz to moodle questions"
readme = "README.md"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
    'wand>=0.5.9',
    'lxml>=3.5.0',
    'pyparsing>=2.4.6',
    'wheel>=0.29.0',
    'markdown'
]
requires-python='>=3.8'

[project.urls]
Homepage = "https://github.com/nennigb/amc2moodle"
Repository = "https://github.com/nennigb/amc2moodle"
Issues = "https://github.com/nennigb/amc2moodle/issues"

[project.scripts]
amc2moodle = "amc2moodle.amc2moodle.bin.amc2moodle:run"
moodle2amc = "amc2moodle.moodle2amc.bin.moodle2amc:run"

[tool.pdm.version]
source = "file"
path = "amc2moodle/_version.py"

[tool.pdm.build]
source-includes = [
    "LICENSE",
    "README.md"
]
includes = [
    "amc2moodle/",
    "amc2moodle/moodle2amc/README.md",
    "amc2moodle/amc2moodle/README.md",
    "amc2moodle/amc2moodle/bin/amc2moodle",
    "amc2moodle/amc2moodle/*.xslt",
    "amc2moodle/amc2moodle/*sty.ltxml",
    "amc2moodle/moodle2amc/bin/moodle2amc",
    "amc2moodle/moodle2amc/html2tex.xslt",
    "amc2moodle/moodle2amc/struc2tex.xslt",
    "amc2moodle/tests/payload_test_amc2moodle/Figures/*",
    "amc2moodle/tests/payload_test_amc2moodle/Figures/other/*",
    "amc2moodle/tests/payload_test_amc2moodle/4.png",
    "amc2moodle/tests/payload_test_amc2moodle/QCM.pdf",
    "amc2moodle/tests/payload_test_amc2moodle/QCM.tex",
    "amc2moodle/tests/payload_test_amc2moodle/QCM.xml",
    "amc2moodle/tests/payload_test_amc2moodle/QCM_wo-tikz.tex",
    "amc2moodle/tests/payload_test_amc2moodle/QCM_wo-tikz.xml",
    "amc2moodle/tests/payload_test_amc2moodle/tikz.tex",
    "amc2moodle/tests/payload_test_amc2moodle/common-bank.tex",
    "amc2moodle/tests/payload_test_amc2moodle/numerical.tex",
    "amc2moodle/tests/payload_test_amc2moodle/numerical.xml",
    "amc2moodle/tests/payload_test_amc2moodle/cleaning.tex",
    "amc2moodle/tests/payload_test_amc2moodle/cleaning.xml",
    "amc2moodle/tests/payload_test_amc2moodle/element.tex",
    "amc2moodle/tests/payload_test_amc2moodle/includestyles.tex",    
    "amc2moodle/tests/payload_test_moodle2amc/automultiplechoice.sty",
    "amc2moodle/tests/payload_test_moodle2amc/moodle-bank-exemple.xml",
    "amc2moodle/tests/payload_test_moodle2amc/moodle-bank-exemple.tex",
    "amc2moodle/tests/payload_test_moodle2amc/moodle-bank-exemple.pdf"
]
excludes = [
    "**/*_magic.tex",
    "**/xmlclean*",
    "**/__pycache__"
]

# [tool.setuptools]
# package-dir = { "amc2moodle" = "amc2moodle", "amc2moodle.tests" = "tests"}

[tool.coverage.run]
branch = true
command_line = "-m unittest discover -s test/"

[tool.coverage.html]
directory = "coverage_html_report"
