[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "amc2moodle"
version = "0.0.0"  # Will be replaced by poetry-dynamic-versioning
authors = [
    "B. Nennig <benoit.nennig@isae-supmeca.fr>",
    "L. Laurent <luc.laurent@lecnam.net>"
]
description = "A tool to convert automultiplechoice quizz to moodle questions"
readme = "README.md"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
license = "LICENSE"
homepage = "https://github.com/nennigb/amc2moodle"
repository = "https://github.com/nennigb/amc2moodle"
packages = [
    { include = "amc2moodle" }
]
include = [
    {path = "LICENSE", format = ["sdist", "wheel"]},
    {path = "README.md", format = ["sdist", "wheel"]},
    {path = "amc2moodle/", format = ["sdist", "wheel"]},
    {path = "amc2moodle/", format = ["sdist", "wheel"]},
    {path = "amc2moodle/moodle2amc/README.md", format = ["sdist", "wheel"]},
    {path = "amc2moodle/amc2moodle/README.md", format = ["sdist", "wheel"]},
    {path = "amc2moodle/amc2moodle/bin/amc2moodle", format = ["sdist", "wheel"]},
    {path = "amc2moodle/amc2moodle/*.xslt", format = ["sdist", "wheel"]},
    {path = "amc2moodle/amc2moodle/*sty.ltxml", format = ["sdist", "wheel"]},
    {path = "amc2moodle/moodle2amc/bin/moodle2amc", format = ["sdist", "wheel"]},
    {path = "amc2moodle/moodle2amc/html2tex.xslt", format = ["sdist", "wheel"]},
    {path = "amc2moodle/moodle2amc/struc2tex.xslt", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/Figures/*", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/Figures/other/*", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/4.png", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/QCM.pdf", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/QCM.tex", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/QCM.xml", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/QCM_wo-tikz.tex", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/QCM_wo-tikz.xml", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/tikz.tex", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/common-bank.tex", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/numerical.tex", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/numerical.xml", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/cleaning.tex", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/cleaning.xml", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/element.tex", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_amc2moodle/includestyles.tex",     format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_moodle2amc/automultiplechoice.sty", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_moodle2amc/moodle-bank-exemple.xml", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_moodle2amc/moodle-bank-exemple.tex", format = ["sdist", "wheel"]},
    {path = "amc2moodle/tests/payload_test_moodle2amc/moodle-bank-exemple.pdf", format = ["sdist", "wheel"]},
]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.from-file]
source = "amc2moodle/_version.py"
pattern = '''(^__version__\s*(?::.*?)?=\s*['"])[^'"]*(['"])'''

[tool.poetry.urls]
"Issues" = "https://github.com/nennigb/amc2moodle/issues"

[tool.poetry.dependencies]
python = ">= 3.7.0"
"wand" = ">= 0.5.9"
"lxml" = ">= 3.5.0"
"pyparsing" = ">= 2.4.6"
"wheel" = ">= 0.29.0"
"markdown" = "> 0.0.0"

[tool.poetry.scripts]
amc2moodle = "amc2moodle.amc2moodle.bin.amc2moodle:run"
moodle2amc = "amc2moodle.moodle2amc.bin.moodle2amc:run"


[tool.coverage.run]
branch = true
command_line = "-m unittest discover -s test/"

[tool.coverage.html]
directory = "coverage_html_report"
